# ccs-digitalmarketplace-frontend-jinja

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  SECURITY.txt  mypy.ini  package-lock.json  package.json  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.txt  setup.py  tasks.py
.github/: dependabot.yml
.github/workflows/: publish.yml  release.yml  test.yml
app/: __init__.py
app/templates/: _base_page.html
digitalmarketplace_frontend_jinja/: __init__.py
digitalmarketplace_frontend_jinja/templates/components/alert/: macro.html
digitalmarketplace_frontend_jinja/templates/components/attachment/: macro.html
digitalmarketplace_frontend_jinja/templates/components/banner/: macro.html
digitalmarketplace_frontend_jinja/templates/components/character-count-from-form/: macro.html
digitalmarketplace_frontend_jinja/templates/components/checkboxes-from-form/: macro.html
digitalmarketplace_frontend_jinja/templates/components/compliance-communication-attachment-row/: macro.html
digitalmarketplace_frontend_jinja/templates/components/compliance-communication-attachments/: macro.html
digitalmarketplace_frontend_jinja/templates/components/cookie-banner/: macro.html
digitalmarketplace_frontend_jinja/templates/components/documents/: macro.html
digitalmarketplace_frontend_jinja/templates/components/file-upload-from-form/: macro.html
digitalmarketplace_frontend_jinja/templates/layouts/: _custom_dimensions.html
tests/: conftest.py  test_components.py  test_errors.py  test_layouts.py
tests/utils/: app.py
(+58 files in other folders)
